# learning-django

./: .env  blog_data.json  cert.crt  cert.key  db.sqlite3  mysite_data.json  pyproject.toml
account/: authentication.py  forms.py  models.py  urls.py  views.py
account/migrations/: 0001_initial.py  0002_contact.py
account/templates/: base.html
account/templates/account/: dashboard.html  edit.html  login.html
account/templates/account/user/: detail.html  list.html
account/templates/registration/: logged_out.html  login.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  register.html  register_done.html
actions/: models.py  utils.py
actions/migrations/: 0001_initial.py
blog/: admin.py  feeds.py  forms.py  models.py  sitemaps.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_post_slug.py  0003_comment.py  0004_post_tags.py  0005_trigram_ext.py
blog/templates/blog/: base.html
blog/templates/blog/post/: comment.html  detail.html  list.html  share.html
blog/templates/blog/post/includes/: comment_form.html
blog/templatetags/: blog_tags.py
images/: forms.py  models.py  urls.py  views.py
images/migrations/: 0001_initial.py  0002_image_total_likes_and_more.py
images/static/js/: bookmarklet.js
images/templates/images/image/: create.html  detail.html  list.html
my_blog/: settings.py  urls.py
my_site/: settings.py  urls.py
