[tool.poetry]
name = "my-blog"
version = "0.1.0"
description = ""
authors = ["Abhishek Barve <barveabhishek.ab@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
asgiref = "3.7.2"
Django = "5.0.4"
sqlparse = "0.5.0"
python-decouple = "3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
