[tool.poetry]
name = "my-blog"
version = "0.1.0"
description = ""
authors = ["Abhishek Barve <barveabhishek.ab@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
asgiref = "3.7.2"
Django = "5.0.4"
sqlparse = "0.5.0"
python-decouple = "3.8"
django-taggit = "5.0.1"
markdown = "3.6"
psycopg = "3.1.18"
pillow = "^11.1.0"
social-auth-app-django = "5.4.0"
django-extensions = "3.2.3"
werkzeug = "3.0.2"
pyopenssl = "24.1.0"
requests = "2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
